--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,4 @@
-FROM lorisleiva/laravel-docker:7.2
+FROM lorisleiva/laravel-docker:8.2
 EXPOSE 8000
 
 COPY .  /var/www
@@ -6,6 +6,7 @@ RUN rm -f composer.lock
 RUN composer install
 RUN cp .env.example .env
 RUN php artisan key:generate
+RUN php artisan jwt:secret
 
 
 CMD php artisan --host=0.0.0.0 serve
