--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "toastify-js": "^1.12.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
