Update on Vuejs

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,8 +6,7 @@ RUN rm -f composer.lock
 RUN composer install
 RUN cp .env.example .env
 RUN php artisan cache:clear
-RUN php artisan config:clear
-RUN php artisan cache:clear
+RUN php artisan config:cache
 RUN php artisan key:generate
 RUN php artisan jwt:secret
 
