--- a/admin/package.json
+++ b/admin/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "toastify-js": "^1.12.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
