--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -2,5 +2,5 @@ FROM node:lts-alpine
 WORKDIR /app
 COPY . .
 RUN npm install
-EXPOSE 5173
-CMD [ "npm", "run", "dev", "--", "--host", "0.0.0.0" ]
+EXPOSE 5174
+CMD [ "npm", "run", "serve", "--", "--host", "0.0.0.0" ]
