--- a/admin/package.json
+++ b/admin/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "production": "vue-cli-service serve --mode production"
   },
   "dependencies": {
     "axios": "^1.4.0",
